syntax = "proto3";

package de.rennschnitzel.backbone.net.protocol;

message FstObject {

	string type = 1;
	bytes data = 2;
	
}
